--- a/ERCS/erc-7888.md
+++ b/ERCS/erc-7888.md
@@ -1,5 +1,5 @@
 ---
-eip: XXXX
+eip: 7888
 title: Crosschain Broadcaster
 description: Trustless crosschain storage-based message broadcasting for rollups.
 author: Henry Arneson (@godzillaba), Chris Buckland (@yahgwai)
@@ -46,7 +46,7 @@ Chains must satisfy the following conditions to be compatible with the system:
 ### Constants
 
 ```solidity
-uint256 constant BLOCK_HASH_PROVER_POINTER_SLOT = uint256(keccak256("eipXXXX.pointer.slot")) - 1;
+uint256 constant BLOCK_HASH_PROVER_POINTER_SLOT = uint256(keccak256("eip7888.pointer.slot")) - 1;
 ```
 
 ### Broadcaster
@@ -56,7 +56,7 @@ The Broadcaster is responsible for storing messages in state to be read by Recei
 The Broadcaster does not accept duplicate messages from the same publisher.
 
 <div align="center">
-<img src="../assets/erc-XXXX/broadcasting.png" alt="Figure 1" style="width:30%"/>
+<img src="../assets/erc-7888/broadcasting.png" alt="Figure 1" style="width:30%"/>
 
 *Figure 1: A Publisher at address 0x4 calling a Broadcaster at address 0x3*
 </div>
@@ -88,7 +88,7 @@ Since the BlockHashProvers are unidirectional, each type of chain needs to imple
 BlockHashProvers MUST ensure that they will have the same deployed code hash on all chains.
 
 <div align="center">
-<img src="../assets/erc-XXXX/BHP.png" alt="Figure 2" style="width:30%"/>
+<img src="../assets/erc-7888/BHP.png" alt="Figure 2" style="width:30%"/>
 
 *Figure 2: A `BlockHashProver` with home chain L and target chain M*
 </div>
@@ -158,7 +158,7 @@ When updating a BlockHashProverPointer to point to a new BlockHashProver impleme
 BlockHashProverPointers MUST store the code hash of the BlockHashProver implementation in slot `BLOCK_HASH_PROVER_POINTER_SLOT`.
 
 <div align="center">
-<img src="../assets/erc-XXXX/pointer.png" alt="Figure 3" style="width:30%"/>
+<img src="../assets/erc-7888/pointer.png" alt="Figure 3" style="width:30%"/>
 
 *Figure 3: A `BlockHashProverPointer` at address 0xA pointing to a `BlockHashProver` with home chain L and target chain M*
 </div>
@@ -188,7 +188,7 @@ A valid route MUST obey the following:
 - Target chain of the `route[i]` Pointer must equal home chain of the `route[i+1]` Pointer
 
 <div align="center">
-<img src="../assets/erc-XXXX/route.png" alt="Figure 4" style="width:80%"/>
+<img src="../assets/erc-7888/route.png" alt="Figure 4" style="width:80%"/>
 
 *Figure 4: A route [0xA, 0xB, 0xC] from chain L to chain R*<br/>
 *Chain L is an L2, Chain M is Ethereum Mainnet, Chain P is another L2, and Chain R is an L3 settling to Chain P* 
@@ -221,7 +221,7 @@ In Figure 4:
 BlockHashProverCopies are exact copies of BlockHashProvers deployed on non-home chains. When a BlockHashProver code hash is de-referenced from a Pointer, a copy of the BlockHashProver may be used to execute its logic. Since the Pointer references the prover by code hash, a local copy of the Prover can be deployed and used to execute specific proving logic. The Receiver caches a map of `mapping(bytes32 blockHashProverPointerId => IBlockHashProver blockHashProverCopy)` to keep track of BlockHashProverCopies. 
 
 <div align="center">
-<img src="../assets/erc-XXXX/BHPCopy.png" alt="Figure 5" style="width:30%"/>
+<img src="../assets/erc-7888/BHPCopy.png" alt="Figure 5" style="width:30%"/>
 
 *Figure 5: A BlockHashProverCopy of BlockHashProver M->P on chain L*
 </div>
@@ -231,7 +231,7 @@ BlockHashProverCopies are exact copies of BlockHashProvers deployed on non-home 
 The Receiver is responsible for verifying 32 byte messages deposited in Broadcasters on other chains. The caller provides the Receiver with a route to the remote account and proof to verify the route.
 
 <div align="center">
-<img src="../assets/erc-XXXX/receiving.png" alt="Figure 6" style="width:80%"/>
+<img src="../assets/erc-7888/receiving.png" alt="Figure 6" style="width:80%"/>
 
 *Figure 6: Example of a Receiver reading a message from a Broadcaster on chain R*
 </div>
@@ -473,9 +473,4 @@ contract Minter {
 ```
 
 ## Copyright
-Copyright and related rights waived via [CC0](/LICENSE).
-
-## Citation
-Please cite this document as:
-
-Henry Arneson (@godzillaba), Chris Buckland (@yahgwai), "ERC-XXXX: Crosschain Broadcaster [DRAFT]," Ethereum Improvement Proposals, no. XXXX, February 2025. [Online serial]. Available: https://eips.ethereum.org/EIPS/eip-XXXX.
+Copyright and related rights waived via [CC0](../LICENSE.md).
